--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "html-pdf-node": "^1.0.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0"
@@ -25,6 +28,7 @@
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/window-size": "^1.1.1",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.6.4",
     "vite": "^4.0.0"
